--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> Hello World!!! GitHub WebPage </h1> 
+<h1> Hello World!!! This is a GitHub WebPage </h1> 
 <p>¡Thanks GitHub!</p>
 </html>
