--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
 <h1> Hello World!!! This is a GitHub WebPage </h1> 
+<div>
+    <img src="gspic.JPEG" height="200"
+</div>
 <p>¡Thanks GitHub!</p>
 </html>
